--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "all-time-starting-five",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "An app for comparing NBA players across generations",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
@@ -23,9 +23,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+    "url": "https://github.com/jv88899/all-time-starting-five"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/jv88899/all-time-starting-five/issues"
   }
 }
